[package]
name = "s3"
version = "0.1.0"
authors = ["Daniel Akhterov <akhterovd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { git = "https://github.com/seanmonstar/reqwest", features = ["json"] }
tokio = { version = "0.2.0", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.104", features = ["derive"] }
sha2 = "0.8.0"
chrono = "0.4.10"
hex = "0.4.0"
ring = "0.16.9"
