[package]
name = "s3"
version = "0.1.0"
authors = ["Daniel Akhterov <akhterovd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = [ "derive" ] }
sha2 = "0.8.0"
chrono = { version = "0.4.10", features = [ "serde" ] }
hex = "0.4.0"
ring = "0.16.9"
futures-core = "0.3.1"
quick-xml = { version = "0.17.2", features = [ "serialize" ] }
thiserror = "1.0.9"
hyper = { version = "0.13.1", default-features = false, features = [ "runtime", "stream" ] }
http = "0.2.0"
http-body = "0.3.1"
md5 = "0.7.0"
base64 = "0.11.0"
nom = { version = "5.1.0", default-features = false, features = [ "std" ], optional = true }
shellexpand = { version = "1.1.1", default-features = false, optional = true }

[package.metadata.docs.rs]
features = [ "credential_file" ]

[features]
credential_file = [ "nom", "shellexpand" ]

[dev-dependencies]
tokio = { version = "0.2.0", features = ["full"] }
dotenv = "0.15.0"
anyhow = "1.0.26"
